# FpbxCTC

./: .gitignore  LICENSE  README.md  browser_install.go  build.bat  build_installer.bat  caller.go  config.go  extinstall.go  go.mod  go.sum  main.go  registry.go  settings.go
browser-extension/: background.js  manifest.json
browser-extension/popup/: popup.css  popup.html  popup.js
installer/: Cargo.toml
installer/src/: lib.rs
pbx_files/: ctc.lua  ctc.php  ctc_local_config.lua.example
tools/mkico/: main.go
tools/mkicons/: main.go
tools/mkzip/: main.go
