[package]
name = "fpbxctc-installer"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
installrs = "0.1"
anyhow = "1"
winreg = "0.56"
mslnk = "0.1"

[package.metadata.installrs]
gui = true
execution-level = "requireAdministrator"
product-name = "FpbxCTC"
file-version = "1.0.0.0"
legal-copyright = "Copyright (c) 2026 FpbxCTC"
icon = "FpbxCTC.ico"
